@@ -63,6 +63,7 @@ allprojects {
                     "--add-opens=java.base/java.nio=ALL-UNNAMED",
                     "--add-opens=java.base/java.math=ALL-UNNAMED",
                     "--add-opens=java.base/java.util=ALL-UNNAMED",
+                    "--add-opens=java.base/java.time=ALL-UNNAMED",
                     "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
                     "--add-opens=java.base/sun.security.x509=ALL-UNNAMED",
                     "-Dio.netty.tryReflectionSetAccessible=true",
